--- a/business-component/pom.xml
+++ b/business-component/pom.xml
@@ -27,6 +27,10 @@
 	    <artifactId>dom4j</artifactId>
 	    <version>1.6.1</version>
 	</dependency>
-    
+    <dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.38</version>
+	</dependency>
   </dependencies>
 </project>
